# Mesh-Editing-Geometry-Processing

./: CMakeLists.txt  README.md  assignment.md  main.cpp  mesh.cpp  mesh.h  operator.cpp  operator.h  submission-final.md  submission-milestone.md
mesh_struct/: halfedgeMesh.cpp  halfedgeMesh.h
template_inis/final/: denoise_bunny.ini  denoise_cow.ini  noise_bunny.ini  noise_cow.ini  remesh_bunny.ini  remesh_cow.ini  remesh_peter.ini  simplify_cow.ini
template_inis/test/: collapse_edge_icosahedron.ini  flip_edge_icosahedron.ini  simplify_cube.ini  split_edge_icosahedron.ini  subdivide_icosahedron.ini
